{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 240,
  "lineage": "025506b2-686d-362d-8eb5-c0b25a838d56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:688567778048:instance/i-003f548e6cef04cd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003f548e6cef04cd4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d023fb1494fe65c",
            "private_dns": "ip-172-16-9-73.ec2.internal",
            "private_ip": "172.16.9.73",
            "public_dns": "ec2-34-205-90-53.compute-1.amazonaws.com",
            "public_ip": "34.205.90.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0901a56ee5e1aa791",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0358b7479877d00ff",
            "tags": {
              "Name": "nubeit"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a855555458eeb2a6"
            ]
          },
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-059eeca93cf09eebd",
            "arn": "arn:aws:ec2:us-east-1:688567778048:instance/i-0ee21bfc87f5aedf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee21bfc87f5aedf2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0457db245be9903",
            "private_dns": "ip-172-16-6-47.ec2.internal",
            "private_ip": "172.16.6.47",
            "public_dns": "ec2-107-22-122-154.compute-1.amazonaws.com",
            "public_ip": "107.22.122.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03e02c53e181bb897",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ed7f75715da0dcb",
            "tags": {
              "Name": "nubeit"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a855555458eeb2a6"
            ]
          },
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0573a1f9e1dd4432e",
            "owner_id": "688567778048",
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:loadbalancer/app/nubeit-lb/3d23888ff71c10b8",
            "arn_suffix": "app/nubeit-lb/3d23888ff71c10b8",
            "dns_name": "nubeit-lb-1564371676.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:loadbalancer/app/nubeit-lb/3d23888ff71c10b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nubeit-lb",
            "security_groups": [
              "sg-0a855555458eeb2a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0358b7479877d00ff"
              },
              {
                "subnet_id": "subnet-08ed7f75715da0dcb"
              },
              {
                "subnet_id": "subnet-0cbd6790ea5e09a96"
              }
            ],
            "subnets": [
              "subnet-0358b7479877d00ff",
              "subnet-08ed7f75715da0dcb",
              "subnet-0cbd6790ea5e09a96"
            ],
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:listener/app/nubeit-lb/3d23888ff71c10b8/91d7c8e2661a8b75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:listener/app/nubeit-lb/3d23888ff71c10b8/91d7c8e2661a8b75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:loadbalancer/app/nubeit-lb/3d23888ff71c10b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:listener-rule/app/nubeit-lb/3d23888ff71c10b8/91d7c8e2661a8b75/1bd942a81d057628",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:listener-rule/app/nubeit-lb/3d23888ff71c10b8/91d7c8e2661a8b75/1bd942a81d057628",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:listener/app/nubeit-lb/3d23888ff71c10b8/91d7c8e2661a8b75",
            "priority": 1
          },
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_lb_listener.listener",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "arn_suffix": "targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nubeit-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "arn_suffix": "targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nubeit-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment-apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4-20200417062336528400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "target_id": "i-003f548e6cef04cd4"
          },
          "dependencies": [
            "aws_instance.apache",
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment-nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4-20200417062336483700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688567778048:targetgroup/nubeit-targetgroup/a82fda37ff0397d4",
            "target_id": "i-0ee21bfc87f5aedf2"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.security-group",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0573a1f9e1dd4432e",
            "id": "r-rtb-0de5ffcf2d6d1a4841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de5ffcf2d6d1a484",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route-table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de5ffcf2d6d1a484",
            "owner_id": "688567778048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b3a9e06bc08dcf5",
            "route_table_id": "rtb-0de5ffcf2d6d1a484",
            "subnet_id": "subnet-08ed7f75715da0dcb"
          },
          "dependencies": [
            "aws_route_table.route-table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fa6921288357568",
            "route_table_id": "rtb-0de5ffcf2d6d1a484",
            "subnet_id": "subnet-0358b7479877d00ff"
          },
          "dependencies": [
            "aws_route_table.route-table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc0fb6693010b22",
            "route_table_id": "rtb-0de5ffcf2d6d1a484",
            "subnet_id": "subnet-0cbd6790ea5e09a96"
          },
          "dependencies": [
            "aws_route_table.route-table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688567778048:security-group/sg-0a855555458eeb2a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a855555458eeb2a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": null,
            "owner_id": "688567778048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nubeit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688567778048:subnet/subnet-08ed7f75715da0dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/21",
            "id": "subnet-08ed7f75715da0dcb",
            "map_public_ip_on_launch": true,
            "owner_id": "688567778048",
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688567778048:subnet/subnet-0358b7479877d00ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.8.0/21",
            "id": "subnet-0358b7479877d00ff",
            "map_public_ip_on_launch": true,
            "owner_id": "688567778048",
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688567778048:subnet/subnet-0cbd6790ea5e09a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/21",
            "id": "subnet-0cbd6790ea5e09a96",
            "map_public_ip_on_launch": true,
            "owner_id": "688567778048",
            "tags": {
              "Name": "nubeit"
            },
            "vpc_id": "vpc-0e5a458772cbe1fd5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688567778048:vpc/vpc-0e5a458772cbe1fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a6afa18e75689452",
            "default_route_table_id": "rtb-0b4d6b5299dff411e",
            "default_security_group_id": "sg-0852e10a69aec5b94",
            "dhcp_options_id": "dopt-3e985244",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5a458772cbe1fd5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4d6b5299dff411e",
            "owner_id": "688567778048",
            "tags": {
              "Name": "nubeit"
            }
          }
        }
      ]
    }
  ]
}